<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="back_button">Tombol Kembali</string>
    <string name="submit_task">Kumpulkan Tugas</string>
    <string name="no_attachment">Tidak ada lampiran</string>
    <string name="task_detail">Detail Tugas</string>
    <string name="description">Deskripsi:</string>
    <string name="date_start">Tanggal Mulai:</string>
    <string name="deadline_date">Batas Waktu Pengumpulan:</string>
    <string name="attachment">Lampiran:</string>
    <string name="attachment_icon">Attachment icon</string>
    <string name="edit_task">Edit Tugas</string>
    <string name="unknown_class_name">Nama kelas tidak diketahui</string>
    <string name="back">Kembali</string>
    <string name="note_optional">Catatan (Opsional)</string>
    <string name="select_attachment">Pilih File Lampiran</string>
    <string name="send_task">Kirim Tugas</string>
    <string name="submitted_tasks">Tugas Terkumpul</string>
    <string name="no_submissions_found">Belum ada mahasiswa yang mengumpulkan tugas ini.</string>
    <string name="error_loading_submissions">Gagal memuat data submission.</string>
    <string name="view_submissions">Lihat Pengumpulan</string>
    <string name="submit_task_button">Kumpulkan Tugas</string>
    <string name="no_submissions_image_description">Gambar yang menandakan tidak ada submission</string>
    <string name="title_task">Judul Tugas</string>
    <string name="task_description">Deskripsi Tugas</string>
    <string name="select_date_and_time_start"><![CDATA[Pilih Tanggal & Waktu Mulai]]></string>
    <string name="date_deadline">Tanggal Selesai (Deadline)</string>
    <string name="select_date_and_deadline"><![CDATA[Pilih Tanggal & Waktu Selesai]]></string>
    <string name="attacment_optional">Lampiran (Opsional)</string>
    <string name="select_or_change_attachment">Pilih atau Ganti Lampiran</string>
    <string name="no_attachment_yet">Belum ada lampiran.</string>
    <string name="save_change">Simpan Perubahan</string>
    <string name="sending_">Mengirim...</string>
    <string name="task_succesfull_sending">Tugas berhasil dikirim</string>
    <string name="failed_send_task">Gagal mengirim tugas</string>
    <string name="error_assignment_id_not_founded">Error: Assignment ID tidak ditemukan</string>
    <string name="file_selected">File Terpilih</string>
    <string name="delete_task">Hapus Tugas</string>
    <string name="delete_button_text">Hapus</string>
    <string name="cancel_button_text">Batal</string>
</resources>

