<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.submittask.SubmitTaskActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/outline_color_theme" />

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/submit_task"
        android:textColor="@color/outline_color_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_submission_notes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/note_optional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_submission_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_select_file"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/select_attachment"
        android:textAllCaps="false"
        android:textColor="@color/outline_color_theme"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/til_submission_notes"
        app:layout_constraintStart_toStartOf="@id/til_submission_notes"
        app:layout_constraintTop_toBottomOf="@id/til_submission_notes" />

    <TextView
        android:id="@+id/tv_selected_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:textColor="@color/text_color_themed"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/btn_select_file"
        app:layout_constraintStart_toStartOf="@id/btn_select_file"
        app:layout_constraintTop_toBottomOf="@id/btn_select_file"
        tools:text="lampiran_tugas.pdf"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_submit_task_final"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_light"
        android:fontFamily="@font/lato"
        android:text="@string/send_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_select_file"
        app:layout_constraintStart_toStartOf="@id/btn_select_file"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_file_name"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
