<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.submitedtask.SubmittedTaskActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/outline_color_theme" />

    <TextView
        android:id="@+id/tv_page_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/lato"
        android:text="@string/submitted_tasks"
        android:textColor="@color/outline_color_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_submitted_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_page_title"
        tools:listitem="@layout/item_submitted_list" />

    <ProgressBar
        android:id="@+id/pb_submitted_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/outline_color_theme"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_page_title"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_no_submission"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/no_submissions_image_description"
        android:src="@drawable/doesnt_have_an_content_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_page_title"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_no_submissions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-32dp"
        android:fontFamily="@font/lato"
        android:text="@string/no_submissions_found"
        android:textAlignment="center"
        android:textColor="@color/text_color_themed"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_no_submission"
        app:layout_constraintStart_toStartOf="@+id/iv_no_submission"
        app:layout_constraintTop_toBottomOf="@+id/iv_no_submission"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
